# calicomp

./: Cargo.toml  ideal.toml
server/: .gitignore  Cargo.toml
server/src/: events.rs  http.rs  main.rs  parser.rs  ssh.rs
src/: db.rs  glass.rs  lib.rs  main.rs  recipe.rs  tui.rs  ui.rs
src/app/: data.rs  events.rs  mod.rs
src/sys/: data.rs  db.rs  family.rs  glass.rs  mod.rs  recipe.rs
src/ui/: card.rs  cocktail.rs  glassware.rs  image.rs  mod.rs
web/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
web/src/: lib.rs  main.ts
