[package]
name = "calicomp"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "2.1.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.28.1"
eyre = "0.6.12"
human-panic = "2.0.1"
itertools = "0.13.0"
measurements = "0.11.0"
ratatui = "0.28.1"
serde = { version = "1.0.209", features = ["derive", "std", "alloc"] }
serde_json = "1.0.127"
tracing = "0.1.40"
tui-textarea = "0.6.1"
