[package]
name = "calicomp"
version = "0.1.0"
edition = "2021"

[cat]

[dependencies]
better-panic = "0.3.0"
bon = "2.1.0"
chrono = "0.4.38"
clap = "4.5.17"
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "5.0.1"
eyre = "0.6.12"
human-panic = "2.0.1"
image = "0.25.2"
itertools = "0.13.0"
measurements = {version = "0.11.0", features = ["serde"] }
ratatui = "0.28.1"
ratatui-image = "1.0.5"
serde = { version = "1.0.209", features = ["derive", "std", "alloc"] }
serde_json = "1.0.127"
tempfile = "3.12.0"
textwrap = "0.16.1"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tui-big-text = "0.6.0"
tui-textarea = "0.6.1"
