[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
calicomp = {path = ".."}
futures = "0.3.30"
ratatui = "0.28.1"
russh = "0.45.0"
russh-keys = "0.45.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
