[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros", "ws"] }
calicomp = {path = ".."}
futures = "0.3.30"
ratatui = "0.28.1"
russh = "0.45.0"
russh-keys = "0.45.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.1", features = ["auth", "cors", "trace", "validate-request"] }
futures-util = "0.3.30"
serde = { version = "1.0.210", features = ["derive", "std", "alloc"] }
serde_json = "1.0.128"
crossterm = { version = "0.28.1", features = ["event-stream"] }
termwiz = "0.22.0"
ed25519-dalek = "2.1.1"
