[package]
name = "calicomp-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
calicomp = {path = ".."}
crossterm = "0.28.1"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.70"
ratatui = "0.28.1"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Document", "Window"] }
xterm-js-sys = { version = "4.6.0-alpha1", features = ["crossterm-support"] }


